--- a/package.xml
+++ b/package.xml
@@ -70,6 +70,8 @@
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>effort_controllers</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
   <exec_depend>urdf</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
