--- a/config/microbot_control.yaml
+++ b/config/microbot_control.yaml
@@ -5,11 +5,15 @@ microbot:
     publish_rate: 50  
 
   left_joint_controller:
-    type: effort_controllers/JointPositionController 
+    type: velocity_controllers/JointVelocityController 
     joint: platform_to_left_eccenter_joint
-    pid: {p: 1, i: 0.01, d: 0.0}
+    pid:
+      p: 1.0
+      i: 0.01
 
   right_joint_controller:
-    type: effort_controllers/JointPositionController      
+    type: velocity_controllers/JointVelocityController     
     joint: platform_to_right_eccenter_joint
-    pid: {p: 1, i: 0.01, d: 0.0}
+    pid:
+      p: 1.0
+      i: 0.01
