fix: odom topic working

--- a/config/ekf_template.yaml
+++ b/config/ekf_template.yaml
@@ -1,4 +1,4 @@
-frequency: 100              # Match this to your message publish frequencies!
+frequency: 10               # Match this to your message publish frequencies!
 two_d_mode: true            # 2D NAVIGATION
 
 map_frame: map              # Defaults to "map" if unspecified
@@ -6,7 +6,14 @@ odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
-imu0: /imu
+odom0: /visual_odometry
+odom0_config: [true,  true,  true,
+               true, true, true,
+               false, false, false,
+               false, false, false,
+               false, false, false]
+
+imu0: /microbot/imu
 imu0_config: [false,  false,  false,
               false,  false,  true,
               false,  false, false,
