--- a/config/ekf_template.yaml
+++ b/config/ekf_template.yaml
@@ -15,7 +15,7 @@ odom0_config: [true,  true,  true,
 
 imu0: /microbot/imu
 imu0_config: [false,  false,  false,
-              false,  false,  true,
+              false,  false,  false,
               false,  false, false,
               false, false, true,
               true, false, false]
