--- a/config/ekf_template.yaml
+++ b/config/ekf_template.yaml
@@ -9,7 +9,7 @@ world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
 odom0: /visual_odometry
 odom0_config: [true,  true,  false,
-               false, false, false,
+               false, false, true,
                false, false, false,
                false, false, false,
                false, false, false]
